--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <head>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="myStyle.css"/>
+	<link rel="stylesheet" href="https://raw.githubusercontent.com/escottj/MortgageCalculator/master/myStyle.css">
  <script>
    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -131,4 +131,4 @@
 	</p>
 
 </body>
-<script src="myJava.js"></script>
+<script src="https://raw.githubusercontent.com/escottj/MortgageCalculator/master/myJava.js"></script>
