--- a/index.html
+++ b/index.html
@@ -131,4 +131,4 @@
 	</p>
 
 </body>
-<script src=("https://raw.githubusercontent.com/escottj/MortgageCalculator/master/myJava.js")></script>
+<script src=$.getScript("https://raw.githubusercontent.com/escottj/MortgageCalculator/master/myJava.js")></script>
