--- a/index.html
+++ b/index.html
@@ -131,4 +131,6 @@
 	</p>
 
 </body>
-<script src=$.getScript("https://raw.githubusercontent.com/escottj/MortgageCalculator/master/myJava.js")></script>
+<script>
+	$.getScript("https://raw.githubusercontent.com/escottj/MortgageCalculator/master/myJava.js");
+</script>
