--- a/index.html
+++ b/index.html
@@ -131,6 +131,4 @@
 	</p>
 
 </body>
-<script>
-	$.getScript("https://raw.githubusercontent.com/escottj/MortgageCalculator/master/myJava.js");
-</script>
+<script src="https://cdn.rawgit.com/escottj/MortgageCalculator/master/myJava.js"</script>
