--- a/index.html
+++ b/index.html
@@ -131,4 +131,4 @@
 	</p>
 
 </body>
-<script src="https://cdn.rawgit.com/escottj/MortgageCalculator/master/myJava.js"</script>
+<script type="text/javascript" src="https://cdn.rawgit.com/escottj/MortgageCalculator/master/myJava.js"></script>
