--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://cdn.rawgit.com/escottj/MortgageCalculator/master/myStyle.css">
- <script>
+	 <script>
    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -17,18 +17,19 @@
  
    ga('create', 'UA-101851721-1', 'auto');
    ga('send', 'pageview');
- </script>	
+ 
+	</script>
 </head>
 <body>
 	<div class="divTable">
 		<div class="divTableBody">
 			<div class="divTableRow">
 				<div class="divTableCell"><b>Home Cost: </b></div>
-				<div class="divTableCell"><input type="text" id="Home_Cost" value="$300,000" size=10 maxlength=10></input></div>
+				<div class="divTableCell"><input type="text" id="Home_Cost" value="$325,000" size=10 maxlength=10></input></div>
 			</div>
 			<div class="divTableRow">
 				<div class="divTableCell"><b>Down Payment: </b></div>
-				<div class="divTableCell"><input type="text" id="Down_Payment_Dollars" value="$60,000" size=10 maxlength=10></input></div>
+				<div class="divTableCell"><input type="text" id="Down_Payment_Dollars" value="$65,000" size=10 maxlength=10></input></div>
 				<div class="divTableCell"><input type="text" id="Down_Payment" value="20.000%" size=10 maxlength=10></input></div>
 			</div>
 			<div class="divTableRow">
@@ -107,7 +108,13 @@
 			</div>
 		</div>
 	</div>
-
+	<p>
+		<div class="divTableTitle"><b>FHA (3.5%)</b></div>
+		<div class="divTable">
+			<div class="divTableBody" id="table4">
+			</div>
+		</div>
+	</p>
 	<p>
 		<div class="divTableTitle"><b>Interest Rate (%) vs. Extra Monthly Payment ($)</b></div>
 		<div class="divTable">
