--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    ga('create', 'UA-101851721-1', 'auto');
    ga('send', 'pageview');
  
-	</script>
+ </script>	
 </head>
 <body>
 	<div class="divTable">
@@ -64,6 +64,7 @@
 	</div>
 
 	<br><input type="button" value="Calculate" onclick="test()"></input>
+	<input type="button" value="Beta" onclick="beta()"></input>
 		<div class="divTable">
 		<div class="divTableBody">
 			<div class="divTableRow">
@@ -109,6 +110,13 @@
 		</div>
 	</div>
 	<p>
+		<div class="divTableTitle"><b>When Does Total ($) Out of Pocket Become the Same?</b></div>
+		<div class="divTable">
+			<div class="divTableBody" id="table5">
+			</div>
+		</div>
+	</p>
+	<p>
 		<div class="divTableTitle"><b>FHA (3.5%)</b></div>
 		<div class="divTable">
 			<div class="divTableBody" id="table4">
@@ -139,3 +147,4 @@
 
 </body>
 <script type="text/javascript" src="https://cdn.rawgit.com/escottj/MortgageCalculator/master/myJava.js"></script>
+<script type="text/javascript" src="https://cdn.rawgit.com/escottj/MortgageCalculator/master/myJavaBeta.js"></script>
