--- a/index.html
+++ b/index.html
@@ -95,52 +95,8 @@
 		</div>
 	</div>
 
-	<br><button type="button" class="btn btn-primary" onclick="test()">Calculate</button>
+	<br><button type="button" class="btn btn-primary" onclick="calculate()">Calculate</button>
 	<input type="button" value="Beta" onclick="beta()"></input>
-		<div class="divTable">
-		<div class="divTableBody">
-			<div class="divTableRow">
-				<div class="divTableCell"><b>Down Payment: </b></div>
-				<div class="divTableCellR"><div id="dp"></div></div>
-			</div>
-			<div class="divTableRow">
-				<div class="divTableCell"><b>Loan Amount: </b></div>
-				<div class="divTableCellR"><div id="la"></div></div>
-			</div>
-			<div class="divTableRow">
-				<div class="divTableCell"><b>Monthly Mortgage Payment: </b></div>
-				<div class="divTableCellR"><div id="mp"></div></div>
-			</div>
-			<div class="divTableRow">
-				<div class="divTableCell"><b>Monthly Property Tax: </b></div>
-				<div class="divTableCellR"><div id="mpt"></div></div>
-			</div>
-			<div class="divTableRow">
-				<div class="divTableCell"><b>Monthly PMI: </b></div>
-				<div class="divTableCellR"><div id="mpmi"></div></div>
-			</div>
-			<div class="divTableRow">
-				<div class="divTableCell"><b>Monthly Home Owner's Insurance: </b></div>
-				<div class="divTableCellR"><div id="mhmi"></div></div>
-			</div>
-			<div class="divTableRow">
-				<div class="divTableCell"><b>Total Monthly Payment: </b></div>
-				<div class="divTableCellR"><div id="tmp"></div></div>
-			</div>
-			<div class="divTableRow">
-				<div class="divTableCell"><b>Total PMI: </b></div>
-				<div class="divTableCellR"><div id="tpmi"></div></div>
-			</div>
-			<div class="divTableRow">
-				<div class="divTableCell"><b>Months Until 20% Equity: </b></div>
-				<div class="divTableCellR"><div id="equity"></div></div>
-			</div>
-			<div class="divTableRow">
-				<div class="divTableCell"><b>Total Interest Paid: </b></div>
-				<div class="divTableCellR"><div id="ti"></div></div>
-			</div>
-		</div>
-	</div>
 	<p>
 		<div class="divTableTitle"><b>Compare All Interest Rates</b></div>
 		<div class="divTable">
@@ -183,6 +139,40 @@
 			</div>
 		</div>
 	</p>
+
+	<div class="divTable">
+		<div class="divTableBody">
+			<div class="divTableRow">
+				<div class="divTableCell divTableInnerL">Home Cost</div>
+				<div class="divTableCell divTableInnerL">
+				<div class="divTable">
+					<div class="divTableBody">
+						<div class="divTableRow">
+							<div class="divTableCell divTableInnerR"><b>Home Cost: </b></div>
+							<div class="divTableCell divTableInnerL">test</div>
+						</div>
+						<div class="divTableRow">
+							<div class="divTableCell divTableInnerR"><b>Extra Payment: </b></div>
+							<div class="divTableCell divTableInnerL">test2</div>
+						</div>
+					</div>
+				</div>
+				
+				</div>
+
+			</div>
+			<div class="divTableRow">
+				<div class="divTableCell divTableInnerL"><b>Extra Payment: </b></div>
+				<div class="divTableCell divTableInnerL">
+					<div class="divTableCell divTableInnerL">test</div>
+					<div class="divTableCell divTableInnerL">test</div>
+					<div class="divTableCell divTableInnerL">test</div>
+					<div class="divTableCell divTableInnerL">test</div>
+					<div class="divTableCell divTableInnerL">test</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 </body>
 <script type="text/javascript" src="https://cdn.rawgit.com/escottj/MortgageCalculator/master/js/myJava.js"></script>
