--- a/index.html
+++ b/index.html
@@ -5,28 +5,35 @@
 	<meta http-equiv='expires' content='0'>
 	<meta http-equiv='pragma' content='no-cache'>
 </header>
+
 <head>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+	 crossorigin="anonymous"></script>
+	<script src="3.2.1-jquery.min.js"></script>
+	<script src="3.3.7-bootstrap.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdn.rawgit.com/escottj/MortgageCalculator/master/css/myStyle.css">
- <script>
-   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
- 
-   ga('create', 'UA-101851721-1', 'auto');
-   ga('send', 'pageview');
- 
- </script>
+	<script>
+		(function (i, s, o, g, r, a, m) {
+		i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+			(i[r].q = i[r].q || []).push(arguments)
+		}, i[r].l = 1 * new Date(); a = s.createElement(o),
+			m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+		ga('create', 'UA-101851721-1', 'auto');
+		ga('send', 'pageview');
+	</script>
 </head>
+
 <body>
 	<div class="divTable">
 		<div class="divTableBody">
 			<div class="divTableRow">
 				<div class="divTableCell"><b>Home Cost: </b></div>
-				<div class="divTableCellR"><input type="text" id="home-cost" value="$325,000" size=10 maxlength=10></input></div>
+				<div class="divTableCellR"><input type="text" id="home-cost" value="$325,000" size=10 maxlength=10></input>
+				</div>
 			</div>
 			<div class="divTableRow">
 				<div class="divTableCell"><b>Down Payment: </b></div>
@@ -61,7 +68,7 @@
 							<input type="radio" name="loan-term" value="0" autocomplete="off"> Compare All
 						</label>
 					</div>
-				</div>				
+				</div>
 			</div>
 			<div class="divTableRow">
 				<div class="divTableCell"><b>Interest Rate (APR): </b></div>
@@ -74,23 +81,28 @@
 			</div>
 			<div class="divTableRow">
 				<div class="divTableCell"><b>HOA: </b></div>
-				<div class="divTableCellR"><input type="text" id="hoa" value="$120" size=10 maxlength=10></input></div>
+				<div class="divTableCellR"><input type="text" id="hoa" value="$120" size=10 maxlength=10></input>
+				</div>
 			</div>
 			<div class="divTableRow">
 				<div class="divTableCell"><b>Property Tax Rate: </b></div>
-				<div class="divTableCellR"><input type="text" id="property-tax-rate" value="0.840%" size=10 maxlength=10></input></div>
+				<div class="divTableCellR"><input type="text" id="property-tax-rate" value="0.840%" size=10 maxlength=10></input>
+				</div>
 			</div>
 			<div class="divTableRow">
 				<div class="divTableCell"><b>PMI: </b></div>
-				<div class="divTableCellR"><input type="text" id="pmi" value="1.000%" size=10 maxlength=10></input></div>
+				<div class="divTableCellR"><input type="text" id="pmi" value="1.000%" size=10 maxlength=10></input>
+				</div>
 			</div>
 			<div class="divTableRow">
 				<div class="divTableCell"><b>Home Owner's Insurance: </b></div>
-				<div class="divTableCellR"><input type="text" id="hmi" value="$100.00" size=10 maxlength=10></input></div>
+				<div class="divTableCellR"><input type="text" id="hoi" value="$100.00" size=10 maxlength=10></input>
+				</div>
 			</div>
 			<div class="divTableRow">
 				<div class="divTableCell"><b>Extra Payment: </b></div>
-				<div class="divTableCellR"><input type="text" id="extra-payment" value="$0" size=10 maxlength=10></input></div>
+				<div class="divTableCellR"><input type="text" id="extra-payment" value="$0" size=10 maxlength=10></input>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -145,19 +157,19 @@
 			<div class="divTableRow">
 				<div class="divTableCell divTableInnerL">Home Cost</div>
 				<div class="divTableCell divTableInnerL">
-				<div class="divTable">
-					<div class="divTableBody">
-						<div class="divTableRow">
-							<div class="divTableCell divTableInnerR"><b>Home Cost: </b></div>
-							<div class="divTableCell divTableInnerL">test</div>
-						</div>
-						<div class="divTableRow">
-							<div class="divTableCell divTableInnerR"><b>Extra Payment: </b></div>
-							<div class="divTableCell divTableInnerL">test2</div>
+					<div class="divTable">
+						<div class="divTableBody">
+							<div class="divTableRow">
+								<div class="divTableCell divTableInnerR"><b>Home Cost: </b></div>
+								<div class="divTableCell divTableInnerL">test</div>
+							</div>
+							<div class="divTableRow">
+								<div class="divTableCell divTableInnerR"><b>Extra Payment: </b></div>
+								<div class="divTableCell divTableInnerL">test2</div>
+							</div>
 						</div>
 					</div>
-				</div>
-				
+
 				</div>
 
 			</div>
